[package]
name = "axum-ycrdt-websocket"
version = "0.1.0"
edition = "2021"
authors = ["Dawn Chan", "xiwenyoumu"]
description = "Port of the websocket library from yrs-warp to axum"
license = "MIT"
repository = "https://github.com/dawnchan030920/axum-ycrdt-websocket"
keywords = ["axum", "yrs", "crdt", "yjs", "websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = "0.18.2"
axum = { version = "0.7.5", features = ["ws"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.36", features = ["rt", "net", "sync", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tower-http = { version = "0.5.2", features = ["fs"]}

[dev-dependencies]
tokio-tungstenite = "0.23.1"
tokio = { version = "1", features = ["full"] }
bytes = "1.6"
